<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    <ImageView
        android:id="@+id/union_main"
        style="@style/BankPages"
        android:contentDescription="@string/bank_logo"
        android:src="@drawable/union" />

    <TextView
        style="@style/TransactionsTextView"
        android:id="@+id/union_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_balance"/>
    <TextView
        style="@style/TransactionsTextView"
        android:id="@+id/fbn_statement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mini_statement"/>

    <TextView
        style="@style/TransactionsTextView"
        android:id="@+id/fbn_airtime_self"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/airtime_self"/>
    <TextView
        style="@style/TransactionsTextView"
        android:id="@+id/fbn_send_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_money"/>


</LinearLayout>
</ScrollView>